Mirror modifier bug - Bisect mode results in “automerge” even if it shouldn’t. Most likely due to units setup put to cm. #85051

Closed
opened 2021-01-25 17:47:23 +01:00 by Tim Bergholz · 11 comments

System Information
Operating system: Windows 10
Graphics card: GeForce GTX 970

Blender Version
Broken: All Blender versions including the latest 2.91
Worked: Never

Short description of error
Hello guys,

The mirror modifier doesn't do it's job properly when having "bisect" enabled. There is a hidden threshold to which it will snap vertices to the mirror line.
I ruled out all possible things, the mirror pivot is perfectly zeroed out and there is no merge enabled and also no auto merge. Stan from Blenderartists pointed out that switching to meters and scaling the object up 100 times “solves” the problem, so it's most likely a bug related to having switched the units to cm.

It's also not specific to the latest Blender version, it does the same error in older versions. I attached the scene so you can take a look at it. bug.blend

image.png

Exact steps for others to reproduce the error
Load up the scene and simply put it to "bisect" and you will see how it merges the verts when it shouldn't.

**System Information** Operating system: Windows 10 Graphics card: GeForce GTX 970 **Blender Version** Broken: All Blender versions including the latest 2.91 Worked: Never **Short description of error** Hello guys, The mirror modifier doesn't do it's job properly when having "bisect" enabled. There is a hidden threshold to which it will snap vertices to the mirror line. I ruled out all possible things, the mirror pivot is perfectly zeroed out and there is no merge enabled and also no auto merge. Stan from Blenderartists pointed out that switching to meters and scaling the object up 100 times “solves” the problem, so it's most likely a bug related to having switched the units to cm. It's also not specific to the latest Blender version, it does the same error in older versions. I attached the scene so you can take a look at it. [bug.blend](https://archive.blender.org/developer/F9597198/bug.blend) ![image.png](https://archive.blender.org/developer/F9597211/image.png) **Exact steps for others to reproduce the error** Load up the scene and simply put it to "bisect" and you will see how it merges the verts when it shouldn't.
Author

Added subscriber: @ChamferZone

Added subscriber: @ChamferZone

#86289 was marked as duplicate of this issue

#86289 was marked as duplicate of this issue
Tim Bergholz changed title from Mirror modifier bug - Bisect mode results in “automerge” even if it shouldn’t. Most likely do to units setup put to cm. to Mirror modifier bug - Bisect mode results in “automerge” even if it shouldn’t. Most likely due to units setup put to cm. 2021-01-25 17:50:46 +01:00
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Falk David self-assigned this 2021-01-25 23:23:33 +01:00
Member

I can confirm this issue on master and 2.92 beta.

I can confirm this issue on master and 2.92 beta.

Added subscriber: @Stan_Pancakes

Added subscriber: @Stan_Pancakes
Member

Added subscriber: @WCN

Added subscriber: @WCN
Member

The bisect threshold is currently hardcoded to 0.001f. My "fix" just makes this threshold smaller, but a better solution would be to expose this threshold similar to the merging threshold.

The bisect threshold is currently hardcoded to 0.001f. My "fix" just makes this threshold smaller, but a better solution would be to expose this threshold similar to the merging threshold.

Is exposing another threshold setting really a better solution? It'd promote a worse UX, IMHO. It'd probably be better if both bisect and merge used the same threshold, or (preferably) if bisect didn't even touch verts that aren't on the bisect plane at all (i.e. only merged any stray dupes that happen to be connected to the generated edge).

Is exposing another threshold setting really a better solution? It'd promote a worse UX, IMHO. It'd probably be better if both bisect and merge used the same threshold, or (preferably) if bisect didn't even touch verts that aren't on the bisect plane at all (i.e. only merged any stray dupes that happen to be connected to the generated edge).

This issue was referenced by 00ec99050e

This issue was referenced by 00ec99050ea435cb255bb81437b381e5a42660af

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85051
No description provided.